Add final modifications from lesson 4

--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/index.html
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/index.html
@@ -22,10 +22,10 @@
             </nav>
         </header>
         
-        <section class="container">
+        <section class="hero container">
             <h2>Dedicated to the Craft of Building Websites</h2>
             <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-            <a href="register.html">Register Now!</a>
+            <a class="btn btn-alt" href="register.html">Register Now!</a>
         </section>
         
         <section class="container">
