Update demo website with code from lesson 7

--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/register.html
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/register.html
@@ -9,12 +9,10 @@
     </head>
 
     <body>
-		<header class="container group"> 
-            <section class="container">
-                <h1 class="logo">
-                    <a href="index.html">Styles <br> Conference</a>
-                </h1>
-            </section>
+		<header class="primary-header container group">
+	        <h1 class="logo">
+	            <a href="index.html">Styles <br> Conference</a>
+            </h1>
             <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
             
             <nav class="nav primary-nav">
@@ -25,6 +23,13 @@
                 <a href="register.html">Register</a>
             </nav>
         </header>
+
+        <section class="row-alt">
+			<div class="lead container">
+				<h1>Register</h1>
+				<p>Every year we aim to have an unbelievable time, and this year we’d love it for you to join us. Conference passes only cost &dollar;99, one of the best values you’ll find.</p>
+			</div>
+		</section>
 
 		<footer class="primary-footer container group">
             
