--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/speakers.html
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/speakers.html
@@ -9,12 +9,10 @@
     </head>
 
     <body>
-		<header class="container group"> 
-            <section class="container">
-                <h1 class="logo">
-                    <a href="index.html">Styles <br> Conference</a>
-                </h1>
-            </section>
+		<header class="primary-header container group">
+	        <h1 class="logo">
+	            <a href="index.html">Styles <br> Conference</a>
+            </h1>
             <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
             
             <nav class="nav primary-nav">
@@ -25,6 +23,14 @@
                 <a href="register.html">Register</a>
             </nav>
         </header>
+
+        <section class="row-alt">
+			<div class="lead container">
+				<h1>Speakers</h1>
+				<p>We&#8217;re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies. Prepare for an inspiration extravaganza.</p>
+			</div>
+		</section>
+
 
 		<footer class="primary-footer container group">
             
