--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/index.html
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/index.html
@@ -37,8 +37,9 @@
                 <!-- Speakers -->
 
                 <section class="teaser col-1-3">
+                    <h5>Speakers</h5>
                     <a href="speakers.html">
-                        <h5>Speakers</h5>
+                        <img src="assets/images/home/speakers.jpg" alt="Professional Speakers">
                         <h3>World-Class Speakers</h3>
                     </a>
                     <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
@@ -47,8 +48,9 @@
                 Schedule
                 
                 --><section class="teaser col-1-3">
+                    <h5>Schedule</h5>
                     <a href="schedule.html">
-                        <h5>Schedule</h5>
+                        <img src="assets/images/home/schedule.jpg" alt="Conference Schedule">
                         <h3>Three Inspiring Days</h3>
                     </a>
                     <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times</p>
@@ -57,9 +59,11 @@
                 Venue
 
                 --><section class="teaser col-1-3">
+                    <h5>Venue</h5>
                     <a href="venue.html">
-                        <h5>Venue</h5>
+                        <img src="assets/images/home/venue.jpg" alt="Where all things go down">
                         <h3>The Chicago Theatre</h3>
+                    
                     </a>
                     <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue</p>
                 </section>
