--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/venue.html
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/venue.html
@@ -33,6 +33,32 @@
 			</div>
 		</section>
 
+		<section class="row">
+			<div class="grid">
+				
+				<section class="venue-theatre">
+					<div class="col-1-3">
+						<h2>Chicago Theatre</h2>
+						<p>175 N State <br> Chicago, IL 60601</p>
+						<p><a href="https://www.thechicagotheatre.com/">thechicagotheatre.com</a> <br> (312) 462-6300</p>
+					</div><!--
+
+					--><iframe src="https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2schicago+theatre!5e0!3m2!1sen!2sus!4v1388701393606" class="venue-map col-2-3"></iframe>
+				</section>
+
+				<section class="venue-hotel">
+					<div class="col-1-3">
+						<h2>Placeholder Heading</h2>
+						<p>Some damn placeholder <br> Address, forgive me.</p>
+						<p><a href="#">placeholder.website</a> <br> (place) holder phone-number</p>
+					</div><!--
+
+					--><iframe src="https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2schicago+theatre!5e0!3m2!1sen!2sus!4v1388701393606" class="venue-map col-2-3"></iframe>
+				</section>
+
+			</div>
+		</section>
+
 		<footer class="primary-footer container group">
             
             <small>&copy; Styles Conference</small>
