--- a/courses/practical_javascript/code/todo.html
+++ b/courses/practical_javascript/code/todo.html
@@ -6,9 +6,18 @@
 </head>
 <body>
 	<h1>Todo List</h1>
-	<!-- v7r1: There should be a "Display Todos" button and a "Toggle All" button in the app-->
+	<!-- 
+		v7r1: There should be a "Display Todos" button and a "Toggle All" button in the app
+
 	<button id="displayTodosButton">Display Todos</button>
 	<button id="toggleAllButton">Toggle All</button>
+
+	-->
+	<!-- Refactor -->
+	
+	<button onclick="handlers.displayTodos()">Display Todos</button>
+	<button onclick="handlers.toggleAll()">Toggle All</button>
+
 
 	<script src="vx.js" type="text/javascript"></script>
 </body>
