Update vx* to version 10

--- a/courses/practical_javascript/code/todo.html
+++ b/courses/practical_javascript/code/todo.html
@@ -16,7 +16,7 @@
 	<!-- Refactor -->
 	<div>
 		<!-- deprecated
-			
+
 			<button onclick="handlers.displayTodos()">Display Todos</button>
 		-->
 		<button onclick="handlers.toggleAll()">Toggle All</button>
@@ -36,10 +36,12 @@
 	</div>
 
 	<!-- v8r3: It should have working controls for .deleteTodo -->
-	<div>
-		<button onclick="handlers.deleteTodo()">Delete Todo</button>
-		<input id="deleteTodoInputPosition" type="number">
-	</div>
+	<!-- deprecated
+		<div>
+			<button onclick="handlers.deleteTodo()">Delete Todo</button>
+			<input id="deleteTodoInputPosition" type="number">
+		</div>
+	-->
 
 	<!-- v8r4: It should have working controls for .toggleCompleted -->
 	<div>
