--- a/projects/random-quotes/index.html
+++ b/projects/random-quotes/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="quote">
-    <p>A random quote about software development / programming will show up here. Hit Enter or click on this box to get a new quote. Also, you can hover over this box to make it 'pop' *shrugs*. &mdash; <span class="author">Kizito</span></p>
+    <p>A random quote about almost anything will show up here. Hit Enter or click on this box to get a new quote. Also, you can hover over this box to make it 'pop' *shrugs*. &mdash; <span class="author">Kizito</span></p>
   </div>
   <script src="assets/index.js"></script>
 </body>
