update(random-quotes): Fix tweeting not working for touch devices

--- a/projects/random-quotes/index.html
+++ b/projects/random-quotes/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="quote">
-    <p>A random quote about almost anything will show up here. Hit Enter or click on this box to get a new quote. Hit the 'T' key or double click outside this box to tweet the current quote. &mdash; <span class="author">Kizito</span></p>
+    <p>A random quote about almost anything will show up here. Hit Enter or click on this box to get a new quote. Hit the 'T' key or click outside this box to tweet the current quote. &mdash; <span class="author">Kizito</span></p>
   </div>
   <script src="assets/index.js"></script>
 </body>
